@@ -1,38 +1,0 @@
-<?xml version="1.0"?>
-<object name="portlet_conformance" meta_type="CPS Portlet"
-   portal_type="Custom Portlet">
- <f id="Contributors">
-  <e v="admin"/>
- </f>
- <f id="Coverage" v=""/>
- <f id="CreationDate" v="20060103165530Z"/>
- <f id="Creator" v="admin"/>
- <f id="Description" v=""/>
- <f id="EffectiveDate" v=""/>
- <f id="ExpirationDate" v=""/>
- <f id="Format" v="text/html"/>
- <f id="Language" v=""/>
- <f id="ModificationDate" v="20060103165530Z"/>
- <f id="Relation" v=""/>
- <f id="Rights" v=""/>
- <f id="Source" v=""/>
- <f id="Subject"/>
- <f id="Title" v="Conformance statement"/>
- <f id="allow_discussion" v="False"/>
- <f id="cache_cleanup_date" v=""/>
- <f id="cache_params"/>
- <f id="cache_timeout" v="0"/>
- <f id="custom_cache_params"/>
- <f id="disable_override" v="0"/>
- <f id="identifier" v="portlet_774132500"/>
- <f id="javascript" v=""/>
- <f id="js_render_method" v=""/>
- <f id="order" v="10"/>
- <f id="portlet" v=""/>
- <f id="preview"/>
- <f id="provider" v=""/>
- <f id="render_method" v="portlet_conformance_statement"/>
- <f id="slot" v="bottom2"/>
- <f id="slot_override" v="0"/>
- <f id="visibility_range" v="0-0"/>
-</object>
