@@ -25,6 +25,7 @@
  <f id="custom_cache_params">
   <e v="current_lang"/>
   <e v="protocol"/>
+  <e v="baseurl"/>
  </f>
  <f id="disable_override" v="0"/>
  <f id="identifier" v="portlet_774132500"/>
